Use own file dialog handler